Corrección de Propiedad de Archivo

--- a/RetoTecnico-COBOL/RetoTecnico-COBOL.csproj
+++ b/RetoTecnico-COBOL/RetoTecnico-COBOL.csproj
@@ -8,4 +8,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="retotecnico.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
